[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "horizon-cipher"
version = "1.0.0"
description = "Cryptographically secure password generator with encrypted history, CLI, and optional GUI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Horizon Cipher contributors" }]
keywords = ["password", "security", "encryption", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=46.0.3",
  "pyperclip>=1.8.2",
  "PyYAML>=6.0",
  "qrcode>=7.4.2",
  "Pillow>=10.0.0",
  "requests>=2.32.5",
  "urllib3>=2.6.3",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5.0", "pyte>=0.8.0"]
argon2 = ["argon2-cffi>=23.1.0"]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.8.0",
  "mypy>=1.8.0",
]

[project.scripts]
horizon-cipher = "pwd_generator.entrypoint:main"
horizon-cipher-gui = "pwd_generator.entrypoint:main_gui"

[tool.hatch.build.targets.wheel]
packages = ["pwd_generator"]

[tool.hatch.build.targets.sdist]
include = [
  "/pwd_generator",
  "/cipher.py",
  "/simple_cipher.py",
  "/gui.py",
  "/README.md",
  "/requirements.txt",
  "/requirements-dev.txt",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["pwd_generator", "tests", "cipher.py", "simple_cipher.py", "gui.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"pwd_generator/cli/handlers.py" = ["E501"]
"pwd_generator/cli/parser.py" = ["E501"]
"pwd_generator/constants.py" = ["E501"]
"pwd_generator/dependency_checker.py" = ["E501"]
"pwd_generator/duplicates.py" = ["E501"]
"pwd_generator/filters.py" = ["E501"]
"pwd_generator/generator.py" = ["E501"]
"pwd_generator/gui/**/*.py" = ["E501", "F401", "F403", "F405", "E722"]
"pwd_generator/import_export.py" = ["E501"]
"pwd_generator/interactive.py" = ["E501"]
"pwd_generator/patterns.py" = ["E501"]
"pwd_generator/validators.py" = ["E501"]
"pwd_generator/visualization.py" = ["E501"]
"simple_cipher.py" = ["E501", "E701"]
"cipher.py" = ["E501", "E701"]
"gui.py" = ["E501", "E701"]
"tests/*.py" = ["E501", "F401", "F841", "E722"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
packages = ["pwd_generator"]
